fix(css): centre masthead children on mobile with align-items

--- a/src/styles/_masthead.css
+++ b/src/styles/_masthead.css
@@ -16,6 +16,7 @@
 
 @media screen and (max-width: 580px) {
   .masthead .inner {
+    align-items: center;
     flex-direction: column;
   }
 
